# vector-db-comparison

./: .env.example  .gitignore  CHANGELOG-TSX.md  DEPLOYMENT.md  LICENSE  QUICK-START.md  README-WEBAPP.md  README.md  package-lock.json  package.json  pyproject.toml  sample_articles.json  test_embeddings.py  vercel.json
docs/: chroma_setup.md  chroma_upsert_guide.md  milvus_setup.md  pinecone_setup.md  qdrant_setup.md  weaviate_setup.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: VectorDBComparison.tsx
notebooks/: 01_chroma.ipynb  02_weaviate.ipynb  03_milvus.ipynb  04_qdrant.ipynb  05_pinecone.ipynb
src/: main.tsx
utils/: __init__.py  benchmark.py  data_loader.py  date_utils.py  embeddings.py
